--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe Homepage</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1>Am a heading</h1>
-
-    <p>I am a paragraph</p>
+    <h1>Odin Recipes</h1>
 </body>
 </html>
