--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Homepage</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <p>Welcome to my website</p>
+    <p>Here are some recipes</p>
+    <ul>
+        <li><a href="recipes/rice/index.html">Rice</a></li>
+        <li><a href="recipes/banku/index.html">Banku</a></li>
+    </ul>
 </body>
 </html>
